// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component OfflineSnackbar renderMessage returns expected message 1`] = `
<ForwardRef(WithStyles)
  alignContent="center"
  alignItems="center"
  container={true}
  justify="center"
>
  <ForwardRef(WithStyles)
    item={true}
    xs={true}
  />
  <ForwardRef(WithStyles)
    item={true}
    style={
      Object {
        "marginRight": 24,
      }
    }
  >
    icon
  </ForwardRef(WithStyles)>
  <ForwardRef(WithStyles)
    item={true}
  >
    message
  </ForwardRef(WithStyles)>
  <ForwardRef(WithStyles)
    item={true}
    xs={true}
  />
</ForwardRef(WithStyles)>
`;

exports[`Component OfflineSnackbar renders back online snackbar 1`] = `
<div
  className="offlineSnackbar"
>
  <WithStyles(ForwardRef(Snackbar))
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoHideDuration={5000}
    message={
      <ForwardRef(WithStyles)
        alignContent="center"
        alignItems="center"
        container={true}
        justify="center"
      >
        <ForwardRef(WithStyles)
          item={true}
          xs={true}
        />
        <ForwardRef(WithStyles)
          item={true}
          style={
            Object {
              "marginRight": 24,
            }
          }
        >
          <Memo(LinkIcon) />
        </ForwardRef(WithStyles)>
        <ForwardRef(WithStyles)
          item={true}
        >
          Your connection is back online
        </ForwardRef(WithStyles)>
        <ForwardRef(WithStyles)
          item={true}
          xs={true}
        />
      </ForwardRef(WithStyles)>
    }
    onClose={[Function]}
    open={true}
  />
</div>
`;

exports[`Component OfflineSnackbar renders hidden (open: false) snackbar 1`] = `
<div
  className="offlineSnackbar"
>
  <WithStyles(ForwardRef(Snackbar))
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoHideDuration={5000}
    message={
      <ForwardRef(WithStyles)
        alignContent="center"
        alignItems="center"
        container={true}
        justify="center"
      >
        <ForwardRef(WithStyles)
          item={true}
          xs={true}
        />
        <ForwardRef(WithStyles)
          item={true}
          style={
            Object {
              "marginRight": 24,
            }
          }
        >
          <Memo(LinkIcon) />
        </ForwardRef(WithStyles)>
        <ForwardRef(WithStyles)
          item={true}
        >
          Your connection is back online
        </ForwardRef(WithStyles)>
        <ForwardRef(WithStyles)
          item={true}
          xs={true}
        />
      </ForwardRef(WithStyles)>
    }
    onClose={[Function]}
    open={false}
  />
</div>
`;

exports[`Component OfflineSnackbar renders offline snackbar 1`] = `
<div
  className="offlineSnackbar"
>
  <WithStyles(ForwardRef(Snackbar))
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    autoHideDuration={null}
    message={
      <ForwardRef(WithStyles)
        alignContent="center"
        alignItems="center"
        container={true}
        justify="center"
      >
        <ForwardRef(WithStyles)
          item={true}
          xs={true}
        />
        <ForwardRef(WithStyles)
          item={true}
          style={
            Object {
              "marginRight": 24,
            }
          }
        >
          <Memo(LinkOffIcon) />
        </ForwardRef(WithStyles)>
        <ForwardRef(WithStyles)
          item={true}
        >
          Your connection is offline
        </ForwardRef(WithStyles)>
        <ForwardRef(WithStyles)
          item={true}
          xs={true}
        />
      </ForwardRef(WithStyles)>
    }
    onClose={[Function]}
    open={true}
  />
</div>
`;

exports[`Component OfflineSnackbar should have a proper style generator 1`] = `
Object {
  "error": Object {
    "color": "test2",
  },
  "success": Object {
    "color": "test1",
  },
}
`;

exports[`Component OfflineSnackbar should have a proper style generator 2`] = `
Object {
  "error": Object {
    "color": undefined,
  },
  "success": Object {
    "color": undefined,
  },
}
`;

exports[`Component OfflineSnackbar should have a proper style generator 3`] = `
Object {
  "error": Object {
    "color": undefined,
  },
  "success": Object {
    "color": undefined,
  },
}
`;
